# c89atomic

./: .gitignore  CMakeLists.txt  README.md  c89atomic.c  c89atomic.h
.github/workflows/: ci.yml  ci_centos.yml  ci_cpu.yml
extras/: c89atomic_bitmap_allocator.c  c89atomic_bitmap_allocator.h  c89atomic_deque.c  c89atomic_deque.h  c89atomic_ring_buffer.c  c89atomic_ring_buffer.h
tests/: CMakeLists.txt  atomicity.c  c89atomic_basic.c  spmc.c  tests-core-atomic.c  thread.c  thread.h
